# Foxkanes

./: .gitignore  Cargo.toml  README.md
alkanes/foxkanes-animal/: Cargo.toml
alkanes/foxkanes-animal/src/: lib.rs
alkanes/foxkanes-commitment/: Cargo.toml
alkanes/foxkanes-commitment/src/: lib.rs
alkanes/foxkanes-game/: Cargo.toml
alkanes/foxkanes-game/src/: lib.rs
alkanes/foxkanes-zap/: Cargo.toml
alkanes/foxkanes-zap/src/: lib.rs
crates/foxkanes-constants/: Cargo.toml
crates/foxkanes-constants/src/: lib.rs
crates/foxkanes-support/: Cargo.toml
crates/foxkanes-support/src/: lib.rs
scripts/: build-wasms.sh
src/: lib.rs
src/tests/: animal_test.rs  commitment_test.rs  expire_test.rs  game_test.rs  gameplay_test.rs  helpers.rs  hunts_test.rs  mod.rs  vendor.rs
