[package]
name = "foxkanes-zap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
alkanes-std-factory-support = { workspace = true }
metashrew-support = { workspace = true }
foxkanes-support = { workspace = true }
foxkanes-constants = { workspace = true }
anyhow = { workspace = true }
